--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Güngör Demirhan Fan Sayfadır :)</h1>
-<p>Şimdi çıkabilirsiniz.</p>
+<h1>Güngör Demirhan Sayfadır :)</h1>
+<p>İnşa aşamasındadır...</p>
 </body>
 </html>
