--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Güngör Demirhan Sayfadır :)</h1>
+<h1>gungordemirhan.wordpress.com</h1>
 <p>İnşa aşamasındadır...</p>
 </body>
 </html>
