--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>gungordemirhan.wordpress.com</h1>
+<h1><a href="gungordemirhan.wordpress.com"> gungordemirhan.wordpress.com </a> </h1>
 <p>İnşa aşamasındadır...</p>
 </body>
 </html>
