--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1><a href="gungordemirhan.wordpress.com"> gungordemirhan.wordpress.com </a> </h1>
+<h1> Gungor </h1>
+  <a href="gungordemirhan.wordpress.com"> gungordemirhan.wordpress.com </a>
 <p>İnşa aşamasındadır...</p>
 </body>
 </html>
