--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> * </h1>
+<h1>- Güngör Demirhan - </h1>
   <a href="https://gungordemirhan.wordpress.com/author/gungordemirhan/"> gungordemirhan.wordpress.com </a>
 <p>İnşa aşamasındadır...</p>
 </body>
