--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="stylesheet" href="style.css">
+  <title>Güngör Demirhan</title>
+</head>
 <body>
 <h1>- Güngör Demirhan - </h1>
   <a href="https://gungordemirhan.wordpress.com/author/gungordemirhan/"> gungordemirhan.wordpress.com </a>
