--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>Güngör Demirhan</title>
 </head>
 <body>
-<h1>- Güngör Demirhan - </h1>
+<h1>Güngör Demirhan</h1>
   <a href="https://gungordemirhan.wordpress.com/author/gungordemirhan/"> gungordemirhan.wordpress.com </a>
 <p>İnşa aşamasındadır...</p>
+  <a class= "btn" href="mailto:begum.do@gmail.com"  >Say HI!</a>
 </body>
 </html>
