--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
 <h1>Güngör Demirhan</h1>
+<p>Temel bilgilerle Türkçe kaynak oluşturmaya çalışacağım. Buradaki düzenlemeler tamamlanana kadar linkten mevcut kaynaklara erişebilirsiniz.</p>
   <a href="https://gungordemirhan.wordpress.com/author/gungordemirhan/"> gungordemirhan.wordpress.com </a>
-<p>İnşa aşamasındadır...</p>
+
   <a class= "btn" href="mailto:gungordemirhan@hotmail.com"  >Mail Gönder!</a>
   
 </body>
